# uithub-local

./: .gitignore  AGENTS.md  Dockerfile  README.md  TESTS.md  main.py  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
src/uithub_local/: api.py  cli.py  downloader.py  gui.py  loader.py  renderer.py  server.py  utils.py  walker.py
tests/: test_api.py  test_cli.py  test_comments.py  test_split.py  test_utils.py  test_walker.py
