[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uithub-local"
version = "0.1.8"
description = "Local Uithub CLI to flatten Git repositories into text dumps."
authors = [{name = "Codex", email = "codex@example.com"}]
license = {text = "MIT"}
keywords = ["llm", "rag", "context", "github"]
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "tiktoken>=0.5",
    "requests>=2",
    "pathspec>=0.11",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0.1",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
test = [
    "freezegun>=1.4",
    "responses>=0.25",
    "pytest",
    "pytest-cov",
]

[project.scripts]
uithub = "uithub_local.cli:main"
uithub-api = "uithub_local.server:run_server"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=uithub_local --cov-fail-under=90 -q"
